# discord-tts

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  discord-tts.env.sample  docker-compose.yml  init.sh  renovate.json
.github/workflows/: actionlint.yml  build-image.yml  ci.yml  hadolint.yml  pr-check.yml  review.yml  validate-renovate.yml
assets/: emoji_ja.json
src/: command.rs  config.rs  db.rs  filter.rs  global.rs  interactive_component.rs  legacy_command_handler.rs  listener.rs  log_serenity_error.rs  main.rs  message_filter.rs  model.rs  persistence.rs  serenity_utils.rs  songbird_handler.rs  timestretch.rs  tts.rs  voicevox.rs  wavsource.rs
src/android_tts/: api.rs  mod.rs
src/bing_speech/: bing_speech_tts.rs  mod.rs
src/capcutttswrapper/: api.rs  mod.rs
src/coefont_try/: coefont_tts.rs  mod.rs
src/commands/: join.rs  leave.rs  left.rs  mod.rs  setdefaultspeed.rs  setspeed.rs  skip.rs  speaker.rs
src/google_translate/: google_tts.rs  mod.rs
src/handler/: legacy_command.rs  mod.rs  songbird_event.rs
src/ktts/: api.rs  mod.rs
src/listener/: serenity.rs  songbird.rs
src/mirae_tts/: mod.rs
src/naver/: mod.rs  naver_tts.rs
src/omnivoice/: api.rs  mod.rs
src/sayserver/: api.rs  mod.rs
src/voiceroid/: api.rs  mod.rs
src/voicevox/: api.rs  mod.rs  model.rs
src/volcengine/: api.rs  mod.rs
src/winrttts/: api.rs  mod.rs
