[package]
name = "discord-tts"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
bytes = "1.5.0"
envy = "0.4.2"
futures = "0.3.30"
once_cell = "1.19.0"
regex = "1.10.3"
reqwest = { version = "0.11.25", features = ["native-tls", "json"] , default-features = false }
serde = { version = "1.0.197" , features = ["derive"] }
serde_json = "1.0.114"
serenity = { version = "0.12.1", features = ["cache", "client", "voice", "native_tls_backend"], default-features = false }
songbird = { version = "0.4.1", features = ["builtin-queue", "gateway", "serenity", "driver", "native"], default-features = false }
symphonia = { version = "0.5.4", features = ["pcm"], default-features = false }
symphonia-core = { version = "0.5.4" }
structstruck = "0.4.1"
tap = "1.0.1"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wav = "1.0.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
