[package]
name = "discord-tts"
version = "0.16.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
envy = "0.4.2"
futures = "0.3.30"
once_cell = "1.19.0"
regex = "1.10.4"
rustls = "0.23.36"
reqwest = { version = "0.13.0", features = [
    "rustls",
    "json",
    "http2",
], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serenity = { version = "0.12.1", features = [
    "cache",
    "client",
    "voice",
    "rustls_backend",
], default-features = false }
songbird = { version = "0.5.0", features = [
    "builtin-queue",
    "gateway",
    "serenity",
    "driver",
    "rustls",
    "tungstenite",
], default-features = false }
symphonia = { version = "0.5.4", features = [
    "pcm",
    "mp3",
], default-features = false }
symphonia-core = { version = "0.5.4" }
structstruck = "0.5.0"
tap = "1.0.1"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hound = "3.5.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
derivative = "2.2.0"
clap = { version = "4.5.48", features = ["derive", "env"] }
toml = "1.0.0"
json = "0.12.4"
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-webpki-roots",
] }
sha2 = "0.10.9"
hex = "0.4.3"
uuid = { version = "1.19.0", features = ["v4"] }
ssml = "0.2.0"
rubato = "0.14"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
